(fix) original transaction name no longer invisible in dark mode (#298)

--- a/app/assets/stylesheets/_dark.scss
+++ b/app/assets/stylesheets/_dark.scss
@@ -260,4 +260,9 @@ html[data-dark='true'] {
   .check__sig {
     filter: invert(1) hue-rotate(180deg);
   }
+
+  pre.bg-smoke {
+    background: $darkless;
+    color: map-get($palette, white);
+  }
 }
